kubernetes/rocketchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
      - name: rocketchat
        image: registry.rocket.chat/rocketchat/rocket.chat:5.4.5
        ports:
        - containerPort: 3006
