kubernetes/rocketchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
spec:
  selector:
    app: rocketchat
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
  type: LoadBalancer
